2003-06-13  Sam Steingold  <sds@gnu.org>

	* pathname.d (TrueName) [WIN32_NATIVE]: return bool; made global;
	fixed a bug with overwriting "nameout" string with "resolved"
	* spvw_memfile.d (loadmem) [WIN32_NATIVE]: use TrueName() to
	resolve possible symbolic links
	* lispbibl.d (TrueName): added a prototype

2003-06-13  Sam Steingold  <sds@gnu.org>

	* pathname.d (open_file): when :DIRECTION is :PROBE, open the file
	for input and then immediately close the handle, as suggested by
	the ANSI CL spec; this allows FILE-LENGTH and FILE-WRITE-DATE to
	work on :PROBE streams
	Reported by Pascal Bourguignon <pjb@informatimago.com>

2003-06-12  Sam Steingold  <sds@gnu.org>

	* makemake.in: on win32gcc, translate /cygdrive/ prefixes to the
	normal win32 pathnames (so that clisp.exe would work properly)
	(stage): use the same check for defining ${LN_S} to copy and
	for using it as a copier (as opposed to symbolic linker)

2003-06-12  Sam Steingold  <sds@gnu.org>

	* pathname.d (simplify_directory): fold "*" into :WILD
	and "**" into :WILD-INFERIORS
	(directory_list_valid_p): accept :WILD

2003-06-08  Sam Steingold  <sds@gnu.org>

	* io.d (check_readtable): new function, replaces function
	fehler_readtable() and macro check_readtable()
	(COPY-READTABLE): modified accordingly
	(SET-SYNTAX-FROM-CHAR): ditto, also
	use check_char() instead of fehler_char()
	(test_readtable_arg, test_readtable_null_arg, test_nontermp_arg):
	accept an argument instead of using popSTACK()
	(SET-MACRO-CHARACTER, GET-MACRO-CHARACTER, SET-READTABLE-CASE)
	(MAKE-DISPATCH-MACRO-CHARACTER, SET-DISPATCH-MACRO-CHARACTER)
	(GET-DISPATCH-MACRO-CHARACTER, READTABLE-CASE):
	modified accordingly, use check_char() instead of fehler_char()

2003-06-07  Sam Steingold  <sds@gnu.org>

	* init.lisp (*suppress-check-redefinition*): new user variable
	(check-redefinition): respect it

2003-06-07  Sam Steingold  <sds@gnu.org>

	* cfgacorn.lisp, cfgamiga.lisp, cfgdos.lisp, cfgwin32.lisp: